--- a/archivo.html
+++ b/archivo.html
@@ -11,6 +11,6 @@
   </style>
 </head>
 <body>
-<p class="p1">Hola mundo<span class="Apple-converted-space"> </span></p>
+<p class="p1">Hola mundo 213</p>
 </body>
 </html>
